# libexif

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  SECURITY.md  WDY-android-build  autogen.sh  configure.ac  configure.in  exif.c  exif.h  libexif-uninstalled.pc.in  libexif.pc.in  libexif.spec.in  libexifConfig.cmake.in  main.c
.github/: dependabot.yml
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt  LicenseRef-Wrobel.txt  MIT.txt
aolserver/: Makefile  nsexif.c
binary-dist/: Makefile.am
contrib/: Makefile.am
contrib/aolserver/: Makefile  nsexif.c
contrib/c++/: Makefile  exif.hxx  exif_module.cxx
contrib/examples/: CMakeLists.txt  Makefile.am  cam_features.c  photographer.c  thumbnail.c  write-exif.c
contrib/watcom/: Makefile  Makefile.wat  _stdint.h  _stdint_watcom.h
doc/: .gitignore  CMakeLists.txt  Doxyfile-internals.in  Doxyfile.in  Makefile.am  README.apidocs  footer.html
gexif/: .gitignore  Makefile.am  gexif-main.c  gexif-main.h  gexif-thumbnail.c  gexif-thumbnail.h  gexif.c
libexif/: .gitignore  Makefile.am  exif-actions.c  exif-actions.h  exif-byte-order.c  exif-byte-order.h  exif-content.c  exif-content.h  exif-data-type.h  exif-data.c  exif-data.h  exif-entry.c  exif-entry.h  exif-format.c  exif-format.h  exif-gps-ifd.c  exif-gps-ifd.h  exif-i18n.h  exif-ifd.c  exif-ifd.h  exif-loader.c  exif-loader.h  exif-log.c  exif-log.h  exif-mem.c  exif-mem.h  exif-mnote-data-priv.h  exif-mnote-data.c  exif-mnote-data.h  exif-note.c  exif-note.h  exif-result.h  exif-system.h  exif-tag.c  exif-tag.h  exif-utils.c  exif-utils.h  exif.c  exif.h  i18n.h  (+2 more)
libexif-gtk/: .gitignore  Makefile.am  gtk-exif-browser.c  gtk-exif-browser.h  gtk-exif-content-list.c  gtk-exif-content-list.h  gtk-exif-entry-ascii.c  gtk-exif-entry-ascii.h  gtk-exif-entry-copyright.c  gtk-exif-entry-copyright.h  gtk-exif-entry-date.c  gtk-exif-entry-date.h  gtk-exif-entry-exposure.c  gtk-exif-entry-exposure.h  gtk-exif-entry-flash.c  gtk-exif-entry-flash.h  gtk-exif-entry-generic.c  gtk-exif-entry-generic.h  gtk-exif-entry-light.c  gtk-exif-entry-light.h  gtk-exif-entry-meter.c  gtk-exif-entry-meter.h  gtk-exif-entry-number.c  gtk-exif-entry-number.h  gtk-exif-entry-option.c  gtk-exif-entry-option.h  gtk-exif-entry-orientation.c  gtk-exif-entry-orientation.h  gtk-exif-entry-rational.c  gtk-exif-entry-rational.h  gtk-exif-entry-resolution.c  gtk-exif-entry-resolution.h  gtk-exif-entry-sensing.c  gtk-exif-entry-sensing.h  gtk-exif-entry-version.c  gtk-exif-entry-version.h  gtk-exif-entry-ycbcrpos.c  gtk-exif-entry-ycbcrpos.h  gtk-exif-entry.c  gtk-exif-entry.h  (+7 more)
libexif-gtk/gtk-extensions/: Makefile.am  gtk-menu-option.c  gtk-menu-option.h  gtk-option-menu-option.c  gtk-option-menu-option.h  gtk-options.c  gtk-options.h  gtk-position.c  gtk-position.h
libexif/apple/: Makefile-files  exif-mnote-data-apple.c  exif-mnote-data-apple.h  mnote-apple-entry.c  mnote-apple-entry.h  mnote-apple-tag.c  mnote-apple-tag.h
libexif/canon/: .gitignore  Makefile-files  Makefile.am  exif-canon-entry.c  exif-canon-entry.h  exif-canon-note.c  exif-canon-note.h  exif-canon-tag.c  exif-canon-tag.h  exif-mnote-data-canon.c  exif-mnote-data-canon.h  mnote-canon-entry.c  mnote-canon-entry.h  mnote-canon-tag.c  mnote-canon-tag.h
libexif/fuji/: .gitignore  Makefile-files  Makefile.am  exif-fuji-entry.c  exif-fuji-entry.h  exif-fuji-note.c  exif-fuji-note.h  exif-fuji-tag.c  exif-fuji-tag.h  exif-mnote-data-fuji.c  exif-mnote-data-fuji.h  mnote-fuji-entry.c  mnote-fuji-entry.h  mnote-fuji-tag.c  mnote-fuji-tag.h
libexif/hp/: .gitignore  Makefile.am  exif-hp-note.c  exif-hp-note.h
libexif/olympus/: .gitignore  Makefile-files  Makefile.am  exif-mnote-data-olympus.c  exif-mnote-data-olympus.h  exif-olympus-entry.c  exif-olympus-entry.h  exif-olympus-note.c  exif-olympus-note.h  exif-olympus-tag.c  exif-olympus-tag.h  mnote-olympus-entry.c  mnote-olympus-entry.h  mnote-olympus-tag.c  mnote-olympus-tag.h
libexif/pentax/: Makefile-files  Makefile.am  exif-mnote-data-pentax.c  exif-mnote-data-pentax.h  mnote-pentax-entry.c  mnote-pentax-entry.h  mnote-pentax-tag.c  mnote-pentax-tag.h
libjpeg/: .gitignore  Makefile.am  jpeg-data.c  jpeg-data.h  jpeg-marker.c  jpeg-marker.h
m4/: Makefile.am  gp-check-library.m4  gp-check-popt.m4  gp-check-shell-environment.m4  gp-config-msg.m4  gp-documentation.m4  gp-gettext-hack.m4  gp-pkg-config.m4  stdint.m4
m4m/: Makefile.am  (+8 more)
test/: .gitignore  CMakeLists.txt  Makefile.am  check-failmalloc.sh  check-mnote.sh  check-vars.sh.in  extract-parse.sh  inc-comparetool.sh  parse-regression.sh  swap-byte-order.sh  test-browser.c  test-exif.c  test-extract.c  test-fuzzer-persistent.c  test-fuzzer.c  test-gps.c  test-integers.c  test-mem.c  test-mnote.c  test-null.c  test-parse-from-data.c  test-parse.c  test-sorted.c  test-tagtable.c  test-tree.c  test-value.c
test/nls/: .gitignore  Makefile.am  check-codeset.in  check-localedir.in  check-nls.in  print-localedir.c  test-codeset.c  test-nls.c
test/testdata/: canon_makernote_variant_1.jpg.json  canon_makernote_variant_1.jpg.parsed  canon_makernote_variant_1.jpg.xml  fuji_makernote_variant_1.jpg.json  fuji_makernote_variant_1.jpg.parsed  fuji_makernote_variant_1.jpg.xml  olympus_makernote_variant_2.jpg.json  olympus_makernote_variant_2.jpg.parsed  olympus_makernote_variant_2.jpg.xml  olympus_makernote_variant_3.jpg.json  olympus_makernote_variant_3.jpg.parsed  olympus_makernote_variant_3.jpg.xml  olympus_makernote_variant_4.jpg.json  olympus_makernote_variant_4.jpg.parsed  olympus_makernote_variant_4.jpg.xml  olympus_makernote_variant_5.jpg.json  olympus_makernote_variant_5.jpg.parsed  olympus_makernote_variant_5.jpg.xml  pentax_makernote_variant_2.jpg.json  pentax_makernote_variant_2.jpg.parsed  pentax_makernote_variant_2.jpg.xml  pentax_makernote_variant_3.jpg.json  pentax_makernote_variant_3.jpg.parsed  pentax_makernote_variant_3.jpg.xml  pentax_makernote_variant_4.jpg.json  pentax_makernote_variant_4.jpg.parsed  pentax_makernote_variant_4.jpg.xml
(+39 files in other folders)
