SUBDIRS = intl po libexif libjpeg test m4

EXTRA_DIST = @PACKAGE@.spec

########################################################################
# The following default options for aclocal and automake
# are required in the top level Makefile.am for the automatic 
# re-building of the build system files (only if configured with
# --enable-maintainer-mode). 
#
# It is not sufficient to have these options somewhere in autogen.sh!

ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = gnu

