# Copyright (C) 2008 Dan Fandrich <dan@coneharvesters.com>
# SPDX-License-Identifier: LGPL-2.0-or-later

SUBDIRS = examples

# The c++ and aolserver contrib directories are out of date and are
# are pointless to distribute in the offical source release.

EXTRA_DIST = watcom/Makefile watcom/_stdint.h

